= Release Notes
:drivers_repo: http://ocient-archive/ocientrepo/java/jdbc

All our jdbc drivers are located {drivers_repo}[here]. 
Below is the release notes for every driver version that has customer implication.

// tag::compact[]

== 2.54 (2022-3-9)

New Features::

  * Added CLI support for SET ADJUSTFACTOR, ADJUSTTIME

//tag::compact[]

== 2.53 (2022-2-8)

New Features::

 * Added redirect support for execute export, explain pipeline, check data

//tag::compact[]

== 2.52 (2022-1-18)

New Features::

 * Secondary result set threads will start fetching immediately after the first result set thread gets a ping.

//tag::compact[]

== 2.51 (2022-1-14)

New Features::

 * Make force external consistent with other connection parameters

//tag::compact[]

== 2.50 (2022-1-13)

New Features::

 * Fix invalid argument message to not refer to ODBC client

//tag::compact[]

== 2.49 (2022-1-6)

New Features::

 * Add more logging to multithreaded result set fetch.

//tag::compact[]

== 2.48 (2022-1-3)

New Features::

 * Insert statements supported

== 2.47 (2021-12-16)

New Features::

 * Data extract tool released.
 * Deactive connection caching for calls to createConnection

//tag::compact[]

== 2.46 (2021-12-8)

New Features::

 * Fix connection pooling handling with regards to setting schema incorrectly.

//tag::compact[]

== 2.45 (2021-12-2)

New Features::

 * Swallow runtime error as well when trying to set socket options.

//tag::compact[]

== 2.44 (2021-12-1)

New Features::

 * Wrap invalid socket options in try catch block and swallow exceptions. For compatability with Java versions that are older.

//tag::compact[]

== 2.43 (2021-11-22)

New Features::

 * Change driver to not rely on the pom/MANIFEST for the driver version. Move the version into JDBCDriver

//tag::compact[]

== 2.42 (2021-11-18)

New Features::

 * Changed connections to utilize keep alive probes in order to detect dead connections.

//tag::compact[]
== 2.41 (2021-11-07)

New Features::
